fix: nav external links on mobile

--- a/src/Components/Nav/MobileTopNav.scss
+++ b/src/Components/Nav/MobileTopNav.scss
@@ -98,19 +98,26 @@
   }
 
   .mtn-external-link-wrapper {
-    margin: 8px auto;
-    font-size: 16px;
-    color: $color-main-text-inverse;
-    opacity: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin: 8px 0;
+    color: $color-main-text;
 
     .mtn-external-link {
       display: flex;
       align-items: center;
       margin: 4px 0;
 
+      .mtn-external-link-icon {
+        font-size: 16px;
+      }
+
       a {
         margin-left: 4px;
-        color: $color-main-text-inverse;
+        font-size: 12px;
+        color: $color-main-text;
         text-decoration: none;
       }
     }
